# extBase64

./: .gitignore  CMakeLists.txt  README.md
Base64/: CMakeLists.txt  Extension.cpp  Extension.h  Types.cpp  Types.h  base64_decode.h  base64_encode.h
Bundle/debian/: changelog  clean  control  slang-base64.install  slang-base64.manpages  slang-base64.substvars
Bundle/man/: extSlangBase64.7
CMake/: Common.cmake  Dependencies.cmake.tmp
Extension/: CMakeLists.txt  Defines.h  Extension.cpp  Extension.h  Types.h  base64_decode.h  base64_encode.h
Extension/Base64/: CMakeLists.txt  Defines.h  Extension.cpp  Extension.h  Types.cpp  base64_decode.h  base64_encode.h
Specification/: CMakeLists.txt  autogen.txt  main.cpp
Tests/: TestBase64.os
